--- a/src/app/modules/virt-list/virt-list.component.html
+++ b/src/app/modules/virt-list/virt-list.component.html
@@ -1,8 +1,9 @@
-<div #scroller [ngStyle]="{'max-height': vlHeight, 'overflow-y': 'scroll', 'will-change': 'transform'}">
+<div #scroller [ngStyle]="{'max-height': vlHeight, 'overflow-y': 'scroll', 'will-change': 'scroll-position, transform'}">
   <div #container [ngStyle]="{
     'display': 'flex', 'flex-direction': 'column', 'position': 'relative',
     'overflow': 'hidden',
-    'min-height': containerHeight, 'height': containerHeight, 'max-height': containerHeight
+    'min-height': containerHeight, 'height': containerHeight, 'max-height': containerHeight,
+    'will-change': 'content'
   }">
     <div [ngStyle]="{'max-height': '0px', 'padding-top': paddingTop}"></div>
     <ng-content></ng-content>
