--- a/src/app/modules/virt-list/virt-list.component.html
+++ b/src/app/modules/virt-list/virt-list.component.html
@@ -1,4 +1,4 @@
-<div #scroller [ngStyle]="{'max-height': vlHeight, 'overflow-y': 'scroll', 'will-change': 'scroll-position, transform'}">
+<div #scroller [ngStyle]="{'max-height': maxHeight, 'overflow-y': 'scroll', 'will-change': 'scroll-position, transform'}">
   <div #container [ngStyle]="{
     'display': 'flex', 'flex-direction': 'column', 'position': 'relative',
     'overflow': 'hidden',
