--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,14 @@
   </div>
 
   <div [ngStyle]="{'width': '100px', 'margin': '15px'}">
-    <dd-virt-list #vlSimple vlHeight="300px" [vlTrigger]="vlTrigger" [vlData]="vlData">
+    <dd-virt-list #vlSimple vlHeight="300px" vlBatchSize="10" [vlTrigger]="vlTrigger" [vlData]="vlData">
       <label *ngFor="let ii of vlSimple.items; trackBy: trackBy;" [style.font-family]="'monospace'">{{ ii }}</label>
     </dd-virt-list>
   </div>
 
   <div [ngStyle]="{'width': '100px', 'margin': '15px'}">
-    <dd-virt-list #vlLazy vlHeight="300px" [vlTrigger]="vlTrigger" [vlCount]="vlData.length" [vlLazyStream]="vlStream" (vlLazyRequest)="onLazyRequestVlist($event)">
+    <dd-virt-list #vlLazy vlHeight="300px" vlBatchSize="10" [vlTrigger]="vlTrigger" [vlCount]="vlData.length" [vlLazyStream]="vlStream"
+      (vlLazyRequest)="onLazyRequestVlist($event)">
       <label *ngFor="let ii of vlLazy.items; trackBy: trackBy;" [style.font-family]="'monospace'">{{ ii }}</label>
     </dd-virt-list>
   </div>
